# raylib-game-of-life-16x16

./: CMakeLists.txt  CMakePresets.json  README.md  configure_cmake.bat  main.cpp
